src/compiletest/tcell-12.stderr
error[E0277]: `std::cell::Cell<i32>` cannot be shared between threads safely
   --> $DIR/tcell-12.rs:15:5
    |
15  |     std::thread::spawn(|| owner.ro(&cell).set(200));  // Compile fail
    |     ^^^^^^^^^^^^^^^^^^ `std::cell::Cell<i32>` cannot be shared between threads safely
    |
    = help: the trait `std::marker::Sync` is not implemented for `std::cell::Cell<i32>`
    = note: required because of the requirements on the impl of `std::marker::Sync` for `qcell::TCell<main::Marker, std::cell::Cell<i32>>`
    = note: required because of the requirements on the impl of `std::marker::Send` for `&qcell::TCell<main::Marker, std::cell::Cell<i32>>`
    = note: required because it appears within the type `[closure@$DIR/src/compiletest/tcell-12.rs:15:24: 15:51 owner:&qcell::TCellOwner<main::Marker>, cell:&qcell::TCell<main::Marker, std::cell::Cell<i32>>]`
